testsuite/tests/properties/invalid_map/test.out
== arg_type.lkt ==
arg_type.lkt:6:27: error: argument type must be implicit
6 |         self.nb_list.map((x: Int) => x)
  |                           ^^^^^^


== correct.lkt ==
Code generation was successful

== default_value.lkt ==
default_value.lkt:6:27: error: no default value allowed
6 |         self.nb_list.map((x=12) => x)
  |                           ^^^^


== too_many_args.lkt ==
too_many_args.lkt:6:26: error: one or two arguments expected for the lambda expression
6 |         self.nb_list.map((x, y, z) => x)
  |                          ^^^^^^^^^^^^^^


lkt_compile: Done
